--- a/templates/AcademicCV_en.tex
+++ b/templates/AcademicCV_en.tex
@@ -57,7 +57,7 @@
 \BLOCK{if general}\BLOCK{set data = general['de']}
 \begin{center}
 {
-    \large \textbf{\VAR{data.name}} \href{https://\VAR{data.other_links.Orcid}}{\faOrcid}
+    \large \textbf{\VAR{data.name}} %\href{https://\VAR{data.other_links.Orcid}}{\faOrcid}
 }
 \vspace{8pt}
 
